adding mirum logo text colour change

--- a/src/layouts/components/_case-studies.scss
+++ b/src/layouts/components/_case-studies.scss
@@ -212,6 +212,10 @@
       color: #fff;
     }
 
+    &#mirum-animation-logo {
+      color: #fff;
+    }
+
     &#brand-hub {
       background-size: contain;
       background-color: #E9E9E9;
@@ -230,18 +234,18 @@
 }
 
 
-.no-webp #mary-jane-speechtherapy {
-  background-image: url('../images/mj-speechtherapy.jpg') !important;
-}
-
-.no-webp #wateraid  {
-  background-image: url('../images/wateraid.jpg') !important;
-}
-
-.no-webp #hb-cleaning {
-  background-image: url('../images/carpet_cleaning_update.jpg') !important;
-}
-
-.no-webp #brand-hub {
-  background-image: url('../images/brand-hub-logo.jpg') !important;
-}
+// .no-webp #mary-jane-speechtherapy {
+//   background-image: url('../images/mj-speechtherapy.jpg') !important;
+// }
+//
+// .no-webp #wateraid  {
+//   background-image: url('../images/wateraid.jpg') !important;
+// }
+//
+// .no-webp #hb-cleaning {
+//   background-image: url('../images/carpet_cleaning_update.jpg') !important;
+// }
+//
+// .no-webp #brand-hub {
+//   background-image: url('../images/brand-hub-logo.jpg') !important;
+// }
