--- a/src/layouts/components/_navigation.scss
+++ b/src/layouts/components/_navigation.scss
@@ -81,7 +81,7 @@ header {
 
   a {
     &:hover {
-      color: #000;
+      color: #4A4A4A;
       text-decoration: none;
       box-shadow: none;
     }
