--- a/src/layouts/components/_footer.scss
+++ b/src/layouts/components/_footer.scss
@@ -1,29 +1,31 @@
-.Footer-inner {
-  border-top: 1px solid #E5E5E5;
-  margin-top: 30px;
-  padding-top: 35px;
-  padding-bottom: 35px;
-
-  display: flex;
-  align-items: center;
-
-  .contentful {
-    margin-left: auto;
-  }
-
-  @include breakpoint(medium) {
-    margin-top: 75px;
+footer {
+  > div {
+    border-top: 1px solid var(--grey);
+    margin-top: 30px;
     padding-top: 35px;
     padding-bottom: 35px;
-  }
 
-  @include breakpoint(large) {
-    margin-top: 75px;
-    padding-top: 35px;
-    padding-bottom: 35px;
-  }
+    display: flex;
+    align-items: center;
 
-  p {
-    margin-bottom: 0;
+    .contentful {
+      margin-left: auto;
+    }
+
+    @include breakpoint(medium) {
+      margin-top: 75px;
+      padding-top: 35px;
+      padding-bottom: 35px;
+    }
+
+    @include breakpoint(large) {
+      margin-top: 75px;
+      padding-top: 35px;
+      padding-bottom: 35px;
+    }
+
+    p {
+      margin-bottom: 0;
+    }
   }
 }
