--- a/src/layouts/components/_navigation.scss
+++ b/src/layouts/components/_navigation.scss
@@ -53,7 +53,7 @@ header {
       padding-bottom: 2px;
       transition: all 0.2s ease-in-out;
       &.active {
-        box-shadow: 0 1px 0 rgba(168, 100, 168, 0.2901960784313726);
+        box-shadow: 0 1px 0 var(--primary-colour);
         transition: all 0.2s ease-in-out;
       }
     }
@@ -87,7 +87,7 @@ header {
     }
   }
 
-  &:hover {
-    animation-play-state: running;
-  }
+  // &:hover {
+  //   animation-play-state: running;
+  // }
 }
