white text for mirum opus

--- a/src/layouts/components/_case-studies.scss
+++ b/src/layouts/components/_case-studies.scss
@@ -216,6 +216,10 @@
       color: #fff;
     }
 
+    &#mirum-opus-2018 {
+      color: #fff;
+    }
+
     &#brand-hub {
       background-size: contain;
       background-color: #E9E9E9;
