--- a/src/styles/components/_case-studies.scss
+++ b/src/styles/components/_case-studies.scss
@@ -29,7 +29,7 @@
     height: 100%;
     width: 100%;
     min-height: 300px;
-    
+
     grid-column: span 1;
     overflow: hidden;
 
@@ -59,15 +59,8 @@
       }
 
       span {
-        font-size: .8rem;
+        //font-size: .8rem;
         display: inline-block;
-        @include breakpoint(medium) {
-          font-size: .9rem;
-        }
-
-        @include breakpoint(large) {
-          font-size: .9rem;
-        }
       }
 
       @include breakpoint(medium) {
