--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,8 +5,9 @@
 
 @font-face {
     font-family: 'BebasNeueRegular';
-    src: url('../fonts/BebasNeue-webfont.eot');
-    src: url('../fonts/BebasNeue-webfont.eot?#iefix') format('embedded-opentype'),
+    font-display: auto;
+    src: local('BebasNeueRegular'), url('../fonts/BebasNeue-webfont.eot');
+    src: local('BebasNeueRegular'), url('../fonts/BebasNeue-webfont.eot?#iefix') format('embedded-opentype'),
          url('../fonts/BebasNeue-webfont.woff') format('woff'),
          url('../fonts/BebasNeue-webfont.ttf') format('truetype'),
          url('../fonts/BebasNeue-webfont.svg#BebasNeueRegular') format('svg');
