--- a/src/styles/variables/_typography.scss
+++ b/src/styles/variables/_typography.scss
@@ -1,9 +1,8 @@
 // Google Fonts
-@import url(https://fonts.googleapis.com/css?family=Karla:400,700|Crimson+Text);
+@import url(https://fonts.googleapis.com/css?family=Karla:400,700);
 
 :root {
   --base-font:             'Karla', sans-serif;
-  --secondary-font:        'Crimson Text', serif;
   --logo-font:             'BebasNeueRegular';
 
   --primary-colour:        #A864A8;
