--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,6 +18,11 @@
 
 #logo {
   font-family: var(--logo-font);
+  a {
+    background: linear-gradient(120deg,#f40088,#651fff);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
 }
 
 html {
@@ -44,12 +49,16 @@ body {
   position: relative;
 }
 
-html, body {
+html {
   //width: 100%;
 }
 
 #home {
   scroll-behavior: smooth;
+}
+
+#___gatsby {
+  
 }
 
 .container-wrap {
@@ -62,6 +71,16 @@ html, body {
   padding-left: 7%;
   padding-right: 7%;
   background: #fff;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
 
 form {
