css fixes, bayer content gub

--- a/src/styles/components/_case-studies.scss
+++ b/src/styles/components/_case-studies.scss
@@ -173,6 +173,10 @@
       color: #fff;
     }
 
+    &#bayer-content-hub {
+      color: #fff;
+    }
+
     &#brand-hub {
       background-size: contain;
       background-color: #E9E9E9;
