--- a/src/styles/components/_case-studies.scss
+++ b/src/styles/components/_case-studies.scss
@@ -28,8 +28,6 @@
     position: relative;
     height: 100%;
     width: 100%;
-    min-height: 400px;
-
     grid-column: span 1;
     overflow: hidden;
 
@@ -53,7 +51,7 @@
     .item-inner {
       padding: 25px 7% 25px 7%;
       transition: all .2s ease 0s;
-      position: absolute;
+      position: relative;
       top: 0;
       height: calc(100% - 7%);
       background:rgba(0,0,0,0.6);
@@ -68,7 +66,6 @@
       }
 
       span {
-        //font-size: .8rem;
         display: inline-block;
         line-height: 1.1;
       }
@@ -126,7 +123,7 @@
 
 
       p {
-        //font-size: 15px;
+
         @include breakpoint(medium) {
           font-size: 1.0588235294117647rem;
         }
@@ -137,7 +134,6 @@
       }
 
       a {
-        //font-size: 15px;
         box-shadow: 0 1px 0 var(--grey);
         @include breakpoint(medium) {
           font-size: 17px;
