--- a/src/styles/variables/_typography.scss
+++ b/src/styles/variables/_typography.scss
@@ -1,5 +1,5 @@
 // Google Fonts
-//@import url(https://fonts.googleapis.com/css?family=Karla:400,700);
+@import url(https://fonts.googleapis.com/css?family=Karla:400,700);
 
 :root {
   --base-font:             'Karla', sans-serif;
