--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,11 +18,11 @@
 
 #logo {
   font-family: var(--logo-font);
-  a {
-    background: linear-gradient(120deg, #f40088, #651fff);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
+  // a {
+  //   background: linear-gradient(120deg, #f40088, #651fff);
+  //   -webkit-background-clip: text;
+  //   -webkit-text-fill-color: transparent;
+  // }
 }
 
 html {
