--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -68,6 +68,17 @@ header {
   margin-right: auto;
   line-height: 1;
   animation-play-state: paused;
+  font-family: var(--logo-font);
+
+  a {
+    background: linear-gradient(120deg, #f40088, #651fff);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    &:hover {
+      text-decoration: none;
+      box-shadow: none;
+    }
+  }
 
   @include breakpoint(medium) {
     font-size: 1.8823529411764706rem;
@@ -79,13 +90,5 @@ header {
     font-size: 2.3529411764705883rem;
     margin-right: auto;
     margin-left: 0;
-  }
-
-  a {
-    &:hover {
-      color: #4A4A4A;
-      text-decoration: none;
-      box-shadow: none;
-    }
   }
 }
