--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -33,7 +33,6 @@ body {
   margin-right: auto;
   margin-top: 0;
   margin-bottom: 0;
-  //background: white;
   background: linear-gradient(120deg, rgb(244, 0, 136), rgb(101, 31, 255));
   padding: 4px;
   position: relative;
@@ -175,6 +174,10 @@ input[type="email"] {
 
   &:nth-child(8) {
     --delay: 3.166666666666667s;
+  }
+
+  &:nth-child(9) {
+    --delay: 3.3333333333333335s;
   }
 }
 
