--- a/src/styles/variables/_typography.scss
+++ b/src/styles/variables/_typography.scss
@@ -1,10 +1,6 @@
-// Google Fonts
-//@import url(https://fonts.googleapis.com/css?family=Karla:400,700);
-
 :root {
   --base-font:             'Karla', sans-serif;
-  --logo-font:             'BebasNeueRegular';
-
+  --logo-font:             'Oswald';
   --primary-colour:        #A864A8;
   --black:                 rgb(57, 53, 49);
   --alt-black:             #9c9c9c;
