--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -49,7 +49,6 @@ header {
     }
     a {
       color: #4A4A4A;
-      //font-size: 1.1764705882352942rem;
       font-size: 1rem;
       padding-bottom: 2px;
       transition: all 0.2s ease-in-out;
@@ -72,8 +71,9 @@ header {
   font-weight: 400;
   letter-spacing: -1px;
   a {
-    background: linear-gradient(120deg, #f40088, #651fff);
+    background-image: linear-gradient(120deg, #f40088, #651fff);
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
     padding: 0 2px 0 0;
     &:hover {
