fixing some layouts and bug fixing

--- a/src/styles/components/_portfolio-item.scss
+++ b/src/styles/components/_portfolio-item.scss
@@ -1,6 +1,6 @@
 #portfolio-item {
-  max-width: 960px;
-  margin: 0px auto;
+  // max-width: 960px;
+  // margin: 0px auto;
 
   .gatsby-image-outer-wrapper {
     margin-bottom: 20px;
@@ -14,8 +14,4 @@
     margin-top: 0;
     margin-bottom: 40px;
   }
-}
-
-.back-to-home {
-  margin: 20px 0;
 }
