--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,6 +1,6 @@
 footer {
   > div {
-    border-top: 1px solid var(--grey);
+    border-top: 1px solid var(--primary-colour);
     margin-top: 30px;
     padding-top: 35px;
     padding-bottom: 35px;
