--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -51,11 +51,18 @@ header {
       color: #4A4A4A;
       font-size: 1rem;
       padding-bottom: 2px;
+      text-decoration: none;
       transition: all 0.2s ease-in-out;
+
+      &:hover, &:focus {
+        outline: none;
+      }
+
       &.active {
         box-shadow: 0 1px 0 var(--primary-colour);
         transition: all 0.2s ease-in-out;
       }
+
     }
   }
 }
