adding thirsty thursdays item

--- a/src/styles/components/_case-studies.scss
+++ b/src/styles/components/_case-studies.scss
@@ -172,6 +172,10 @@
       color: #fff;
     }
 
+    &#thirsty-thursdays {
+      color: #fff;
+    }
+
     &#brand-hub {
       background-size: contain;
       background-color: #E9E9E9;
