--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -1,21 +1,10 @@
 header {
   display: flex;
-  padding-top: 25px;
-  padding-bottom: 25px;
+  padding-top: 7%;
+  padding-bottom: 7%;
   flex-direction: column-reverse;
   @include breakpoint(medium) {
     flex-direction: row-reverse;
-    align-items: center;
-  }
-
-  @include breakpoint(large) {
-    //position: relative;
-    background: none;
-    padding-top: 90px;
-    padding-bottom: 50px;
-    flex-direction: row-reverse;
-
-
     align-items: center;
   }
 }
