--- a/src/styles/components/_case-studies.scss
+++ b/src/styles/components/_case-studies.scss
@@ -156,6 +156,10 @@
       color: #fff;
     }
 
+    #grolsch {
+      color: #fff;
+    }
+
     &#shell-v-power {
       color: #fff;
       box-shadow: 0px 0px 2px #E9E9E9;
