adding funky button bits

--- a/src/styles/variables/_typography.scss
+++ b/src/styles/variables/_typography.scss
@@ -1,7 +1,7 @@
 :root {
   --base-font:             'Karla', sans-serif;
   --logo-font:             'Oswald';
-  --primary-colour:        #A864A8;
+  --primary-colour:        rgb(244, 0, 136);
   --black:                 rgb(57, 53, 49);
   --alt-black:             #9c9c9c;
   --grey:                  #E5E5E5;
