--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -108,18 +108,22 @@ textarea {
 }
 
 button {
-  background-color: var(--primary-colour);
-  border: none;
-  color: white;
-  padding: 12px 30px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
+  --x: 50%;
+	--y: 50%;
+  transition: all .2s ease-in-out;
+	position: relative;
+	appearance: none;
+	padding: 12px 30px;
+	cursor: pointer;
+	outline: none;
+	border-radius: 4px;
   font-size: 16px;
-  border-radius: 4px;
-  cursor: pointer;
-  &:hover, &:active, &:focus {
-    opacity: .9;
+	// The magic
+	border: 2px solid transparent;
+	background: linear-gradient(#FFF, #FFF) padding-box, radial-gradient(farthest-corner at  var(--x) var(--y), var(--primary-colour), rgb(101, 31, 255)) border-box;
+  &:focus {
+    background: var(--primary-colour);
+    color: white;
   }
 }
 
