swapping basiley photography

--- a/src/styles/components/_case-studies.scss
+++ b/src/styles/components/_case-studies.scss
@@ -185,6 +185,10 @@
       color: #fff;
     }
 
+    &#bailey-photography {
+      color: #fff;
+    }
+
     &#brand-hub {
       background-size: contain;
       background-color: #E9E9E9;
