--- a/src/styles/variables/_typography.scss
+++ b/src/styles/variables/_typography.scss
@@ -5,6 +5,8 @@
   --black:                 rgb(57, 53, 49);
   --alt-black:             #9c9c9c;
   --grey:                  #E5E5E5;
+  --x:                     50%;
+  --y:                     50%;
 }
 
 
