updating background border gradient snizzle....

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -108,8 +108,8 @@ textarea {
 }
 
 button {
-  // --x: 50%;
-	// --y: 50%;
+  --x: 50%;
+	--y: 50%;
   transition: all .2s ease-in-out;
 	position: relative;
 	appearance: none;
