--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -22,7 +22,7 @@ body {
 
 #___gatsby {
   transition: all .2s ease-in-out;
-	border: 4px solid transparent
+	border: 4px solid transparent;
 	background: linear-gradient(#FFF, #FFF) padding-box, radial-gradient(farthest-corner at  var(--x) var(--y), var(--primary-colour), rgb(101, 31, 255)) border-box;
   @include breakpoint(medium) {
     border: 10px solid transparent;
