adding sessionStorage logic for homepage

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -213,14 +213,14 @@ input[type="email"] {
   }
 }
 
-// page is loaded....
-// body.loaded {
-//   .heading-wrap span,
-//   .heading-wrap .page-title,
-//   #case-studies .item {
-//     animation: none;
-//   }
-// }
+// Layout is loaded....
+.container-wrap.loaded {
+  .heading-wrap span,
+  .heading-wrap .page-title,
+  #case-studies .item {
+    animation: none;
+  }
+}
 
 body.home {
   #navigation li {
