--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -222,32 +222,32 @@ input[type="email"] {
   }
 }
 
-body.home {
-  #navigation li {
-    &:first-of-type {
-      > a {
-        @extend .active;
-      }
-    }
-  }
-}
+// body.home {
+//   #navigation li {
+//     &:first-of-type {
+//       > a {
+//         @extend .active;
+//       }
+//     }
+//   }
+// }
 
-body.services {
-  #navigation li {
-    &:nth-child(2) {
-      > a {
-        @extend .active;
-      }
-    }
-  }
-}
+// body.services {
+//   #navigation li {
+//     &:nth-child(2) {
+//       > a {
+//         @extend .active;
+//       }
+//     }
+//   }
+// }
 
-body.contact {
-  #navigation li {
-    &:nth-child(3) {
-      > a {
-        @extend .active;
-      }
-    }
-  }
-}
+// body.contact {
+//   #navigation li {
+//     &:nth-child(3) {
+//       > a {
+//         @extend .active;
+//       }
+//     }
+//   }
+// }
