--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -12,6 +12,7 @@ footer {
       margin-left: auto;
       width: 22px;
       height: 22px;
+      box-shadow: none;
       &:hover {
         box-shadow: none;
       }
