--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -226,10 +226,10 @@ input[type="email"] {
 }
 
 // Layout is loaded....
-.container-wrap.loaded {
-  .heading-wrap span,
-  .heading-wrap .page-title,
-  #case-studies .item {
-    animation: none;
-  }
-}
+// .container-wrap.loaded {
+//   .heading-wrap span,
+//   .heading-wrap .page-title,
+//   #case-studies .item {
+//     animation: none;
+//   }
+// }
