--- a/src/styles/variables/_typography.scss
+++ b/src/styles/variables/_typography.scss
@@ -13,12 +13,6 @@
 }
 
 
-@media (prefers-color-scheme: dark) {
-  body {
-    background: black;
-  }
-}
-
 h1, h2, h3, h4, h5, h6 {
   margin: 10px 0 20px;
   font-weight: 400;
@@ -73,13 +67,19 @@ h3 {
 }
 
 a {
-  box-shadow: inset 0 -0.5em var(--blue);
-  transition: box-shadow .2s ease-in-out;
+  box-shadow: inset 0 -0.125rem 0 0 var(--green);
+  transition: color 0.4s cubic-bezier(0.55,0.085,0,0.99),box-shadow 0.4s cubic-bezier(0.55,0.085,0,0.99);
   text-decoration: none;
-  color: black;
-  &:hover {
-    box-shadow: inset 0 -1.2em 0 var(--blue);
+  color:var(--alt-black);
+  &:hover, &:focus {
+    box-shadow: inset 0 -0.5625rem 0 0 rgba(156, 255, 219, 0.5);
+    color:var(--black);
   }
+}
+
+::selection {
+  background-color: var(--primary-colour);
+  color: #fff;
 }
 
 
