--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -37,17 +37,20 @@ header {
       padding-left: 0;
     }
     a {
-      color: #4A4A4A;
-      font-size: 1rem;
       padding-bottom: 2px;
       text-decoration: none;
-      box-shadow: inset 0 0 var(--primary-colour);
+      box-shadow: none;
       transition: box-shadow .2s ease-in-out;
-
       &.active {
-        box-shadow: inset 0 -1px var(--primary-colour);
+        box-shadow: inset 0 -0.125rem 0 0 var(--blue);
+        &:hover {
+          box-shadow: inset 0 -0.125rem 0 0 var(--blue);
+        }
       }
 
+      &:hover {
+        box-shadow: inset 0 -0.125rem 0 0 #f1f1f1;;
+      }
     }
   }
 }
