--- a/src/styles/variables/_typography.scss
+++ b/src/styles/variables/_typography.scss
@@ -4,7 +4,7 @@
   --primary-colour:        rgb(244, 0, 136);
   --pink:                  #ffd6ed;
   --green:                 #9cffdb;
-  --blue:                  #d6f0ff;
+  --blue:                  #89d4ff;
   --black:                 rgb(57, 53, 49);
   --alt-black:             #9c9c9c;
   --grey:                  #E5E5E5;
@@ -67,13 +67,13 @@ h3 {
 }
 
 a {
-  box-shadow: inset 0 -0.125rem 0 0 var(--green);
+  box-shadow: inset 0 -0.125rem 0 0 var(--blue);
   transition: color 0.4s cubic-bezier(0.55,0.085,0,0.99),box-shadow 0.4s cubic-bezier(0.55,0.085,0,0.99);
   text-decoration: none;
-  color:var(--alt-black);
+  color: var(--black);
   &:hover, &:focus {
-    box-shadow: inset 0 -0.5625rem 0 0 rgba(156, 255, 219, 0.5);
-    color:var(--black);
+    box-shadow: inset 0 -0.5625rem 0 0 rgba(137, 212, 255, 0.5);
+    color: var(--black);
   }
 }
 
