--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -23,7 +23,8 @@ body {
 #___gatsby {
   transition: all .2s ease-in-out;
 	border: 4px solid transparent;
-	background: linear-gradient(#FFF, #FFF) padding-box, radial-gradient(farthest-corner at  var(--x) var(--y), var(--primary-colour), rgb(101, 31, 255)) border-box;
+  background: linear-gradient(#FFF, #FFF) padding-box, radial-gradient(farthest-corner at  var(--x) var(--y), var(--primary-colour), rgb(101, 31, 255)) border-box;
+  min-height: 100vh;
   @include breakpoint(medium) {
     border: 10px solid transparent;
   }
