--- a/src/styles/components/_case-studies.scss
+++ b/src/styles/components/_case-studies.scss
@@ -30,6 +30,7 @@
     width: 100%;
     grid-column: span 1;
     overflow: hidden;
+    color: #fff;
 
     @include breakpoint(medium) {
         min-height: 350px;
@@ -139,49 +140,12 @@
 
     }
 
-    &#mary-jane-speechtherapy {
-      color: #fff;
-    }
-
-    &#wateraid {
-      color: #fff;
-    }
-
-    &#hb-cleaning {
-      color: #fff;
-    }
-
-    &#grolsch {
-      color: #fff;
-    }
-
     &#shell-v-power {
-      color: #fff;
       box-shadow: 0px 0px 2px #E9E9E9;
     }
 
-    &#southern-sports {
-      color: #fff;
-    }
-
-    &#mirum-animation-logo {
-      color: #fff;
-    }
-
-    &#mirum-opus-2018 {
-      color: #fff;
-    }
-
-    &#bayer-content-hub {
-      color: #fff;
-    }
-
-    &#thirsty-thursdays {
-      color: #fff;
-    }
-
-    &#bailey-photography {
-      color: #fff;
+    &#mirum-xt-tm {
+      color: inherit;
     }
 
     &#brand-hub {
