--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -158,10 +158,9 @@ input[type="email"] {
 
 #case-studies .item {
   animation: card__moveIn 2s cubic-bezier(.22,1,.32,1) var(--delay) backwards;
-
   @for $i from 1 through 15 {
     &:nth-child(#{$i}) {
-      --delay: #{$i * .18s};
+      --delay: #{(1 + 0.1667 * ($i - 1))}s;
     }
   }
 }
