--- a/src/styles/variables/_typography.scss
+++ b/src/styles/variables/_typography.scss
@@ -83,9 +83,14 @@ a {
   color: #fff;
 }
 
-
 p {
   margin: 0 0 12px;
+}
+
+noscript {
+  display: block;
+  margin-bottom: 12px;
+  margin-top: 12px;
 }
 
 ul, ol {
