--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -4,7 +4,6 @@ footer {
     margin-top: 30px;
     padding-top: 35px;
     padding-bottom: 35px;
-
     display: flex;
     align-items: center;
 
@@ -12,10 +11,8 @@ footer {
       margin-left: auto;
       width: 22px;
       height: 22px;
-      box-shadow: none;
-      &:hover {
-        box-shadow: none;
-      }
+      border: 0 none;
+      background: none;
     }
 
     @include breakpoint(medium) {
