--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -38,18 +38,15 @@ header {
     }
     a {
       padding-bottom: 2px;
-      text-decoration: none;
-      box-shadow: none;
+      background: none;
       transition: box-shadow .2s ease-in-out;
+      border-bottom: 4px solid transparent;
       &.active {
-        box-shadow: inset 0 -0.125rem 0 0 var(--blue);
-        &:hover {
-          box-shadow: inset 0 -0.125rem 0 0 var(--blue);
-        }
+        background: none;
+        border-color: var(--blue);
       }
-
       &:hover {
-        box-shadow: inset 0 -0.125rem 0 0 #f1f1f1;;
+        border-color: var(--grey);
       }
     }
   }
@@ -72,6 +69,7 @@ header {
     -webkit-text-fill-color: transparent;
     padding: 0 2px 0 0;
     box-shadow: none;
+    border: 0 none;
     &:hover {
       text-decoration: none;
       box-shadow: none;
