--- a/src/styles/variables/_typography.scss
+++ b/src/styles/variables/_typography.scss
@@ -4,7 +4,7 @@
   --primary-colour:        rgb(244, 0, 136);
   --pink:                  #ffd6ed;
   --green:                 #9cffdb;
-  --blue:                  #89d4ff;
+  --blue:                  rgba(137, 212, 255, 0.5);
   --black:                 rgb(57, 53, 49);
   --alt-black:             #9c9c9c;
   --grey:                  #E5E5E5;
@@ -68,13 +68,14 @@ h3 {
 }
 
 a {
-  box-shadow: inset 0 -0.125rem 0 0 var(--blue);
-  transition: color 0.4s cubic-bezier(0.55,0.085,0,0.99),box-shadow 0.4s cubic-bezier(0.55,0.085,0,0.99);
-  text-decoration: none;
   color: var(--black);
-  &:hover, &:focus {
-    box-shadow: inset 0 -0.5625rem 0 0 rgba(137, 212, 255, 0.5);
-    color: var(--black);
+  border-bottom: 4px solid var(--blue);
+  background: linear-gradient(var(--blue),var(--blue) 100%) bottom no-repeat;
+  background-size: 100% 0;
+  transition: background-size .1s;
+  text-decoration: none;
+  &:hover {
+    background-size: 100% 100%;
   }
 }
 
