--- a/src/styles/components/_case-studies.scss
+++ b/src/styles/components/_case-studies.scss
@@ -1,4 +1,4 @@
-#case-studies {
+.cards {
   margin-top: 50px;
   margin-bottom: 0;
   -webkit-overflow-scrolling: touch;
@@ -14,130 +14,169 @@
   @include breakpoint(large) {
     margin-top: 120px;
     margin-bottom: 40px;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(2, 1fr)
   }
 
-  grid-auto-flow: dense;
   grid-gap: 30px;
+}
 
-  .item {
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    position: relative;
-    height: 100%;
-    width: 100%;
-    grid-column: span 1;
+.card {
+
+	$delay: .15s;
+	$duration: .4s;
+	$timing: cubic-bezier(.51, .92, .24, 1);
+
+	position: relative;
+	display: flex;
+	flex-direction: column;
+  background: white;
+  border: 0 none;
+	text-decoration: none;
+	overflow: hidden;
+	transition-property: color;
+	transition-delay: $delay;
+	box-shadow: 0 2px 20px rgba(0, 0, 0, .1);
+
+	&.hover {
+		color: white;
+		transition-delay: 0;
+	}
+
+	&,
+	&__image,
+	&__image::after,
+	&__author,
+	&__body,
+	&__foot,
+	&__border {
+		transition-duration: $duration;
+		transition-timing-function: $timing;
+	}
+
+	&__head {
+		position: relative;
+		padding-top: 70%;
+	}
+
+	&__author {
+		position: absolute;
+		padding: 30px;
+		left: 0;
+		bottom: 0;
+		color: white;
+		transition-property: transform;
+		transition-delay: $delay;
+	}
+
+	&.hover &__author {
+		transition-delay: 0;
+	}
+
+	&__image {
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		background-size: cover;
+		background-position: center;
+		transform-origin: top center;
+		transition-property: transform;
+    transition-delay: $delay;
     overflow: hidden;
-    color: #fff;
-    border-bottom: 0 none;
 
-    @include breakpoint(medium) {
-        min-height: 350px;
-    }
-
-    @include breakpoint(large) {
-        min-height: 460px;
+		&::after {
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			opacity: .5;
+			background: linear-gradient(30deg, rgba(#1a2a63, .85), rgba(#1a2a63, .5));
+			transition-property: opacity;
+			transition-delay: $delay;
     }
 
     video {
       position: absolute;
       left: 0;
       object-fit: cover;
-      width: 101%;
+      width: 100%;
       top: 0;
       height: 100%;
     }
+	}
 
-    .item-inner {
-      padding: 25px 7% 25px 7%;
-      transition: all .2s ease 0s;
-      position: relative;
-      top: 0;
-      height: calc(100% - 7%);
-      background:rgba(0,0,0,0.9);
-      width: calc(100% - 14%);
-      z-index: 1;
-      * {
-        color: #fff;
-      }
+	&.hover &__image {
+		transition-delay: 0;
 
-      h3 {
-        line-height: 1.2;
-      }
+		&::after {
+			opacity: 1;
+			transition-delay: 0;
+		}
+	}
 
-      span {
-        display: inline-block;
-        line-height: 1.2;
-      }
+	&__body {
+		position: relative;
+    padding: 30px;
+    height: 100%;
+		transition-property: transform;
+		transition-delay: $delay;
+	}
 
-      @include breakpoint(medium) {
-        background: transparent;
-        * {
-          color: inherit;
-        }
-      }
+	&.hover &__body {
+		transition-delay: 0;
+	}
 
-      @include breakpoint(large) {
-        background: transparent;
-        padding: 36px;
-        width: calc(100% - 72px);
-        height: calc(100% - 72px);
-        * {
-          color: inherit;
-        }
-      }
+	&__headline {
+		font-weight: 400;
+		margin: 0 0 .8em;
+	}
+
+	&__text {
+		line-height: 1.5;
+		margin: 0;
+		opacity: .8;
+	}
+}
+
+.author {
+
+	display: flex;
+	align-items: center;
+
+	&__image {
+		$size: 56px;
+		flex-shrink: 0;
+		margin-right: 1em;
+		width: $size;
+		height: $size;
+		border-radius: 100%;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    img {
+      width: auto;
+      height: 100%;
     }
+	}
 
-    &:hover {
-      .item-inner__content {
-        opacity: .9;
-        -webkit-transform: translate3d(0,0,0);
-        transform: translate3d(0,0,0);
-      }
-    }
+	&__content {
+		display: grid;
+		grid-gap: .4em;
+		font-size: .9em;
+	}
 
-    .item-inner__content {
-      transition: opacity .3s ease-out .1s,transform .3s ease-out .1s,-webkit-transform .3s ease-out .1s;
-      opacity: .7;
-      max-width: 100%;
-      -webkit-transform: translate3d(0,0,0);
-      transform: translate3d(0,0,0);
-      z-index: 4;
-      position: relative;
-      @include breakpoint(medium) {
-        -webkit-transform: translate3d(-5px,0,0);
-        transform: translate3d(-5px,0,0);
-        opacity: 0;
-        max-width: 80%;
-        font-size: 1.0588235294117647rem;
-      }
+	&__header {
+		margin: 0;
+		font-weight: 600;
+	}
 
-      @include breakpoint(large) {
-        -webkit-transform: translate3d(-5px,0,0);
-        transform: translate3d(-5px,0,0);
-        opacity: 0;
-        font-size: 1.1764705882352942rem;
-        max-width: 90%;
-      }
-    }
+	&__subheader {
+		margin: 0;
+		opacity: .8;
+	}
 
-    &#mirum-xt-tm {
-      color: inherit;
-    }
-
-    &#brand-hub {
-      background-size: contain;
-      background-color: #E9E9E9;
-      color: inherit;
-    }
-  }
-
-  .item-inner:hover,
-  .item-inner:active {
-    * {
-      color: #fff;
-    }
-    background:rgba(0,0,0,0.9);
-  }
 }
