--- a/src/styles/components/_services.scss
+++ b/src/styles/components/_services.scss
@@ -4,14 +4,16 @@
     grid-gap: 50px;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     max-width: 999px;
-
+    margin-top: 50px;
     margin-bottom: 0;
 
     @include breakpoint(medium) {
+      margin-top: 100px;
       margin-bottom: 30px;
     }
 
     @include breakpoint(large) {
+      margin-top: 120px;
       margin-bottom: 40px;
     }
 
