--- a/src/styles/components/_case-studies.scss
+++ b/src/styles/components/_case-studies.scss
@@ -118,15 +118,19 @@
 
 	&__body {
 		position: relative;
-    padding: 30px;
+    padding: 1.875rem;
     height: 100%;
 		transition-property: transform;
     transition-delay: $delay;
 
-    > p:last-of-type {
+    p:last-of-type {
       margin-bottom: 0;
     }
-	}
+  }
+
+  &__link {
+    margin: 12px 0;
+  }
 
 	&.hover &__body {
 		transition-delay: 0;
@@ -145,29 +149,6 @@
 .author {
 	display: flex;
 	align-items: center;
-
-	&__image {
-		$size: 56px;
-		flex-shrink: 0;
-		margin-right: 1em;
-		width: $size;
-		height: $size;
-		border-radius: 100%;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    img {
-      width: auto;
-      height: 100%;
-    }
-	}
-
-	&__content {
-		display: grid;
-		grid-gap: .4em;
-		font-size: .9em;
-	}
 
 	&__header {
 		margin: 0;
