font-display guff

--- a/src/styles/components/_case-studies.scss
+++ b/src/styles/components/_case-studies.scss
@@ -95,7 +95,7 @@
 			right: 0;
 			bottom: 0;
 			opacity: .5;
-			background: linear-gradient(30deg, rgba(#1a2a63, .85), rgba(#1a2a63, .5));
+			background: linear-gradient(30deg,rgba(71, 26, 99, 0.85),rgba(98, 26, 99, 0.5));
 			transition-property: opacity;
 			transition-delay: $delay;
     }
