--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -62,6 +62,7 @@ header {
   line-height: 1;
   animation-play-state: paused;
   font-family: var(--logo-font);
+  font-display: optional;
   text-transform: uppercase;
   font-weight: 400;
   letter-spacing: -1.5px;
